# rebo

./: .gitignore  Cargo.toml  README.md  main.re  test-include.re  test.re
book/: README.md  book.toml  run-rebo
book/src/: SUMMARY.md
book/src/rebo/: rebo.md
book/src/rebo/collections/: list.md  map.md  set.md
book/src/rebo/features/: bindings.md  deep-copy.md  enums.md  expressions.md  features.md  format-strings.md  functions.md  generics.md  hello-world.md  if-match.md  includes.md  loops.md  math.md  methods.md  primitive-conversions.md  primitives.md  statics.md  structs.md  types.md
book/src/rebo/samples/: fibonacci.md  merge-sort.md  samples.md
playground/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  worker-start.js
playground/src/: ace-editor.js  lib.rs  main.rs  rebo.rs
rebo/: Cargo.toml
rebo/src/: error_codes.rs  lib.rs  main.rs  parser.rs  scope.rs  span.rs  stdlib.rs  tests.rs  types.rs  util.rs  vm.rs  xdot.rs
rebo/src/common/: expr_gen.rs  mod.rs  spanned.rs  types.rs  values.rs
rebo/src/diagnostics/: error_codes.rs  mod.rs  span.rs
rebo/src/lexer/: lex_fns.rs  mod.rs  token.rs
rebo/src/lints/: break_continue_return.rs  closure_capture_primitives.rs  empty_function_body.rs  enum_def_init_lints.rs  enum_init_is_clike.rs  function_lints.rs  ifelse_return_value.rs  immutable_assign.rs  impl_blocks.rs  invalid_number_of_arguments.rs  match_lints.rs  mod.rs  no_yield.rs  recursive_struct.rs  struct_def.rs  struct_field_access.rs  struct_field_assign.rs  struct_initialization_fields.rs  unknown_access.rs  unknown_function.rs  unknown_impl_block_target.rs  unknown_method.rs  unknown_struct.rs  unknown_struct_field_type.rs  unnecessary_parens.rs  variable_without_function.rs  visitor.rs
rebo/src/parser/: expr.rs  first_pass.rs  mod.rs  parse.rs  precedence.rs  scope.rs
rebo/src/parser/expr/: generator.rs  generator_tests.rs  generator_transform.rs  helper.rs  mod.rs  pattern.rs
rebo/src/stdlib/: list.rs  map.rs  mod.rs  option.rs  result.rs  serde_json_value.rs  set.rs
rebo/src/tests/: binops.rs  conditionals.rs  enums.rs  external_type.rs  functions.rs  generics.rs  impl_blocks.rs  includes.rs  lexer.rs  loops.rs  mod.rs  required_rebo_function.rs  stdlib.rs  structs.rs
rebo/src/typeck/: checker.rs  constraints.rs  create_graph.rs  graph.rs  mod.rs  solver.rs  type_var.rs  types.rs
rebo/src/typeck/graph/: check.rs  create.rs  mod.rs  solve.rs
rebo/src/typeck2/: checker.rs  create_graph.rs  graph.rs  mod.rs  solver.rs
rebo/src/vm/: mod.rs  scope.rs
rebo_derive/: Cargo.toml
rebo_derive/src/: extern_rebo.rs  function.rs  lib.rs  rebo_type.rs  required_rebo_functions.rs  util.rs
src/: main.rs  parser.rs  vm.rs
src/diagnostics/: span.rs
src/lexer/: mod.rs  token.rs
