[package]
name = "rebo"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
lexical-core = { version = "0.7.4", features = ["radix"] }
typed-arena = "2.0.1"
log = "0.4.11"
env_logger = "0.7.1"