[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
web-sys = "0.3.56"
wasm-bindgen = "0.2.79"
rebo = { path = "../rebo" }
getrandom = { version = "0.2.4", features = ["js"] }
wasm-logger = "0.2.0"
log = "0.4.14"
ansi-to-html = "0.1.0"
gloo-utils = "0.1.2"
once_cell = "1.9.0"
itertools = "0.10.3"
gloo-storage = "0.2.0"
serde = { version = "1.0.136", features = ["derive"] }
