[workspace]
members = [ "." ]

[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[lib]

[profile.dev]
opt-level = 3
lto = false

[profile.release]
lto = "fat"
codegen-units = 1
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
web-sys = { version = "0.3.56", features = ["Worker", "DedicatedWorkerGlobalScope", "MessageEvent", "HtmlSelectElement", "Navigator"] }
wasm-bindgen = "0.2.79"
rebo = { path = "../rebo" }
getrandom = { version = "0.2.4", features = ["js"] }
wasm-logger = "0.2.0"
log = "0.4.14"
ansi-to-html = "0.1.0"
gloo-utils = "0.1.2"
gloo-storage = "0.2.0"
gloo-events = "0.1.1"
once_cell = "1.9.0"
itertools = "0.10.3"
serde = { version = "1.0.136", features = ["derive"] }
console_error_panic_hook = "0.1.7"
wee_alloc = "0.4.5"
js-sys = "0.3.56"
instant = "0.1.12"
serde-wasm-bindgen = "0.4.2"
regex = "1.5.4"
flate2 = "1.0.22"
base64 = "0.13.0"
url = "2.2.2"
