[package]
name = "rebo"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
lexical = { version = "5.2.2", features = ["radix"] }
typed-arena = "2.0.1"
diagnostic = { git = "https://github.com/oberien/diagnostic", rev = "889fb5da592d746b47b0fafca6bc7e71c4e2a55e" }
log = "0.4.11"
env_logger = "0.8.4"
rebo_derive = { path = "../rebo_derive" }
lazy_static = "1.4.0"
strsim = "0.10.0"
itertools = "0.9.0"
lexical-sort = "0.3.1"
indexmap = "1.6.2"
derive_more = "0.99.14"
paste = "1.0.5"
regex = "1.5.4"
parking_lot = "0.12.0"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
petgraph = "0.6.0"
strum = "0.21.0"
strum_macros = "0.21.1"
bitflags = "1.3.2"
rt-format = "0.3.0"
rand = "0.8.4"
rand_chacha = "0.3.1"
unicode-segmentation = "1.8.0"
intervaltree = "0.2.7"
num = "0.4.1"
uuid = { version = "1.5.0", features = ["v4"] }
