[package]
name = "rebo"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde_json_value = ["dep:serde_json"]

[dependencies]
lexical = { version = "7.0.4", features = ["radix"] }
typed-arena = "2.0.2"
diagnostic = { git = "https://github.com/oberien/diagnostic", rev = "889fb5da592d746b47b0fafca6bc7e71c4e2a55e" }
log = "0.4.27"
rebo_derive = { path = "../rebo_derive" }
lazy_static = "1.5.0"
strsim = "0.11.1"
itertools = "0.14.0"
lexical-sort = "0.3.1"
indexmap = "2.10.0"
derive_more = { version = "2.0.1", features = ["display"] }
regex = "1.11.1"
parking_lot = "0.12.4"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
petgraph = "0.8.2"
strum = "0.27.1"
strum_macros = "0.27.1"
bitflags = "2.9.1"
rt-format = "0.3.1"
rand = "0.9.1"
rand_chacha = "0.9.0"
unicode-segmentation = "1.12.0"
intervaltree = "0.2.7"
num = "0.4.3"
uuid = { version = "1.17.0", features = ["v4"] }
serde_json = { version = "1.0.140", optional = true }

# FIXME: bin-dependencies not supported: https://github.com/rust-lang/cargo/issues/1982
env_logger = "0.11.8"
clap = { version = "4.5.41", features = ["derive"] }
