[package]
name = "rebo_derive"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.40", features = ["full"] }
quote = "1.0.7"
proc-macro-error = "1.0.4"